--- a/Critter Crosshair Defense/Base.lproj/Main.storyboard
+++ b/Critter Crosshair Defense/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,76 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="5bB-TM-Zjh">
-                                <rect key="frame" x="0.0" y="167" width="375" height="333.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="FPR-8E-ymu">
-                                    <size key="itemSize" width="120" height="120"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CritterThumbnail" id="GSL-Ac-maP" customClass="CritterThumbnail" customModule="Critter_Crosshair_Defense" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IPi-xQ-WI2">
-                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
-                                                </imageView>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="IPi-xQ-WI2" secondAttribute="bottom" id="Hex-ns-FrK"/>
-                                            <constraint firstAttribute="trailing" secondItem="IPi-xQ-WI2" secondAttribute="trailing" id="eey-mX-q80"/>
-                                            <constraint firstItem="IPi-xQ-WI2" firstAttribute="top" secondItem="GSL-Ac-maP" secondAttribute="top" id="fw7-37-bPi"/>
-                                            <constraint firstItem="IPi-xQ-WI2" firstAttribute="leading" secondItem="GSL-Ac-maP" secondAttribute="leading" id="xjY-BC-BP8"/>
-                                        </constraints>
-                                        <connections>
-                                            <outlet property="imageView" destination="IPi-xQ-WI2" id="vWI-g9-6pc"/>
-                                        </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="LfX-Nk-SWj"/>
-                                    <outlet property="delegate" destination="BYZ-38-t0r" id="KSu-T1-qIk"/>
-                                </connections>
-                            </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Critters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8TV-jO-TyB">
-                                <rect key="frame" x="159" y="86" width="57" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dzc-eC-Evz">
-                                <rect key="frame" x="137.5" y="595" width="100" height="30"/>
-                                <state key="normal" title="Choose Critter"/>
-                            </button>
+                            <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I2D-QP-ahG">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </skView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="8TV-jO-TyB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AKS-Tr-aU8"/>
-                            <constraint firstItem="5bB-TM-Zjh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="J6g-fc-UhY"/>
-                            <constraint firstItem="5bB-TM-Zjh" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="M4h-O7-Vbf"/>
-                            <constraint firstItem="5bB-TM-Zjh" firstAttribute="top" secondItem="8TV-jO-TyB" secondAttribute="bottom" constant="60" id="RIm-fs-h9h"/>
-                            <constraint firstItem="Dzc-eC-Evz" firstAttribute="top" secondItem="5bB-TM-Zjh" secondAttribute="bottom" constant="94.5" id="Twg-NJ-OdN"/>
-                            <constraint firstItem="5bB-TM-Zjh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="j3t-gH-SqA"/>
-                            <constraint firstItem="5bB-TM-Zjh" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="tPI-Da-KZ7"/>
-                            <constraint firstItem="Dzc-eC-Evz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vbz-8Z-Bxg"/>
-                            <constraint firstItem="5bB-TM-Zjh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xzH-JW-LkX"/>
+                            <constraint firstItem="I2D-QP-ahG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QbL-oe-qiF"/>
+                            <constraint firstItem="I2D-QP-ahG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="aKe-0h-BlX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="I2D-QP-ahG" secondAttribute="bottom" id="sXM-4p-5Py"/>
+                            <constraint firstItem="I2D-QP-ahG" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vwm-vF-s0D"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="collectionView" destination="5bB-TM-Zjh" id="r46-YF-9K4"/>
+                        <outlet property="skView" destination="I2D-QP-ahG" id="X4p-ff-dW9"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="84" y="159"/>
+            <point key="canvasLocation" x="84" y="158.77061469265368"/>
         </scene>
     </scenes>
 </document>
